--- a/documentations/经验等级系统.md
+++ b/documentations/经验等级系统.md
@@ -34,3 +34,15 @@
 |导游答复评分高于8分|2|
 |其它用户给自己的文章打赏|1|
 |成功完成拼团|1|
+
+## 打赏价格表
+
+|打赏用户花费|被打赏用户收益|
+|:---:|:---:|
+|6|1|
+|18|4|
+|30|8|
+|68|20|
+|198|60|
+|328|110|
+|648|240|
