--- a/documentations/旅游系统.md
+++ b/documentations/旅游系统.md
@@ -10,16 +10,16 @@
 - 经验等级系统：用户通过在平台活跃可以获得一些经验，经验满了升级之后可以获得金币
 
 ## 关系模式
-- 用户(账号, 密码, 用户名, 其它个人信息, 旅游币余额)
-- 景点介绍文章(文章编号, 文章标题, 景点名, 景点所在省份, 发布时间, 文章内容, 点赞数, 作者账号)
-- 导游(导游编号, 用户账号, 导游评分, 导游简介)
-- 导游申请(申请ID, 申请时间, 用户账号, 导游简介)
-- 管理员(管理员编号, 用户账号)
-- 用户咨询(咨询ID, 用户账号, 导游编号, 咨询时间, 咨询内容, 导游答复内容, 用户评分, 咨询阶段)
-- 拼团申请(拼团ID, 发起人账号, 总人数, 出发地, 目的地, 出发时间, 具体描述信息)
-- 参与拼团(参与人账号, 拼团ID)
-- 礼品(礼品编号, 礼品名称, 礼品描述, 礼品价格)
-- 兑换礼品申请(兑换ID, 用户账号, 礼品编号, 申请时间, 邮寄地址, 申请状态)
-- 图片(图片ID, 存放路径, 所属位置类型, 所属位置)
-- 经验(用户账号, 经验值, 经验等级)
-- 点赞(用户账号, 文章编号)
+- 用户(**账号**, 密码, 用户名, 其它个人信息, 旅游币余额)
+- 景点介绍文章(**文章编号**, 文章标题, 景点名, 景点所在省份, 发布时间, 文章内容, *作者账号*)
+- 导游(**导游编号**, *用户账号*, 导游评分, 导游简介)
+- 导游申请(**申请ID**, 申请时间, *用户账号*, 导游简介)
+- 管理员(**管理员编号**, *用户账号*)
+- 用户咨询(**咨询ID**, *用户账号*, *导游编号*, 咨询时间, 咨询内容, 导游答复内容, 用户评分, 咨询阶段)
+- 拼团申请(**拼团ID**, *发起人账号*, 总人数, 出发地, 目的地, 出发时间, 具体描述信息)
+- 参与拼团(***参与人账号*, *拼团ID***)
+- 礼品(**礼品编号**, 礼品名称, 礼品描述, 礼品价格)
+- 兑换礼品申请(**兑换ID**,*用户账号*, *礼品编号*, 申请时间, 邮寄地址, 申请状态)
+- 图片(**图片ID**, 存放路径, 所属位置类型, 所属位置)
+- 经验(***用户账号***, 经验值, 经验等级)
+- 点赞(***用户账号*, *文章编号***)
